# fireshot

./: Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  clipboard.rs  draw.rs  effects.rs  geometry.rs  image_ops.rs  lib.rs  shapes.rs  text.rs
crates/portal/: Cargo.toml
crates/portal/src/: lib.rs
scripts/: test.sh
