[package]
name = "fireshot_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["glow", "wayland", "x11", "default_fonts"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
egui-file-dialog = "0.5"
winit = { version = "0.29", default-features = false, features = ["wayland", "x11"] }
fireshot_core = { path = "../core" }
