[package]
name = "fireshot_portal"
version = "0.1.0"
edition = "2021"

[dependencies]
ashpd = { version = "0.6", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
url = "2"
fireshot_core = { path = "../core" }
